Updated homepage and fixed navbar issue

--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="description" content="Contact EXTRA BAU Construction Company for professional construction services. Get in touch for quotes and project consultations.">
-    <meta name="keywords" content="contact EXTRA BAU, construction contact, building services contact, construction quote">
+    <meta name="description" content="Kontaktieren Sie EXTRA BAU Bauunternehmen für professionelle Bauleistungen. Nehmen Sie Kontakt auf für Angebote und Projektberatungen.">
+    <meta name="keywords" content="EXTRA BAU kontaktieren, Baukontakt, Gebäudeservice Kontakt, Bauangebot">
     <meta name="author" content="EXTRA BAU">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#2e7d32">
-    <title>Contact Us - EXTRA BAU Construction Company</title>
+    <title>Kontaktieren Sie uns - EXTRA BAU Bauunternehmen</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -34,11 +34,11 @@
                 </span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="about.html">Über uns</a></li>
+                <li><a href="services.html">Leistungen</a></li>
+                <li><a href="gallery.html">Galerie</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -83,21 +83,21 @@
             </div>
         </div>
         <div class="container">
-            <h1>Contact Us</h1>
-            <p>Let's Build Something Amazing Together</p>
+            <h1>Kontaktieren Sie uns</h1>
+            <p>Lassen Sie uns gemeinsam etwas Großartiges bauen</p>
         </div>
     </section>
 
     <!-- Contact Information -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2>Contact Us</h2>
+            <h2>Kontaktieren Sie uns</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
-                            <h4>Address</h4>
+                            <h4>Adresse</h4>
                             <p>Wickratherstr. 247 <br>
                                 41236 Mönchengladbach</p>
                         </div>
@@ -105,22 +105,22 @@
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
-                            <h4>Phone</h4>
+                            <h4>Telefon</h4>
                             <p> 0160 42 05 112</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
-                            <h4>Email</h4>
+                            <h4>E-Mail</h4>
                             <p>info@extrabau2025.de</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
                         <div>
-                            <h4>Working Hours</h4>
-                            <p>Monday - Friday: 8:00 AM - 6:00 PM</p>
+                            <h4>Arbeitszeiten</h4>
+                            <p>Montag - Freitag: 8:00 - 18:00 Uhr</p>
                         </div>
                     </div>
                 </div>
@@ -145,25 +145,25 @@
                     </span>
                 </div>
                 <div class="footer-links">
-                    <h4>Quick Links</h4>
+                    <h4>Schnelllinks</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Startseite</a></li>
+                        <li><a href="about.html">Über uns</a></li>
+                        <li><a href="services.html">Leistungen</a></li>
+                        <li><a href="contact.html">Kontakt</a></li>
                     </ul>
                 </div>
                 <div class="footer-services">
-                    <h4>Services</h4>
+                    <h4>Leistungen</h4>
                     <ul>
-                        <li>Commercial Construction</li>
-                        <li>Residential Construction</li>
-                        <li>Renovation & Remodeling</li>
-                        <li>Architectural Design</li>
+                        <li>Gewerbebau</li>
+                        <li>Wohnungsbau</li>
+                        <li>Renovierung & Umbau</li>
+                        <li>Architekturdesign</li>
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <h4>Follow Us</h4>
+                    <h4>Folgen Sie uns</h4>
                     <div class="social-links">
                         <a href="https://www.instagram.com/extrabau2025/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://wa.me/491604205112" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 EXTRA BAU. All rights reserved.</p>
+                <p>&copy; 2025 EXTRA BAU. Alle Rechte vorbehalten.</p>
             </div>
         </div>
     </footer>
