--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="description" content="View EXTRA BAU's construction project gallery showcasing our quality work in drywall, flooring, renovation, and building cleaning.">
-    <meta name="keywords" content="construction gallery, project photos, EXTRA BAU work, construction projects, building gallery">
+    <meta name="description" content="Betrachten Sie EXTRA BAUs Bauprojekt-Galerie, die unsere Qualitätsarbeit in Trockenbau, Bodenbelägen, Renovierung und Gebäudereinigung zeigt.">
+    <meta name="keywords" content="Baugalerie, Projektfotos, EXTRA BAU Arbeit, Bauprojekte, Gebäudegalerie">
     <meta name="author" content="EXTRA BAU">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#2e7d32">
-    <title>Gallery - EXTRA BAU Construction Company</title>
+    <title>Galerie - EXTRA BAU Bauunternehmen</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -34,11 +34,11 @@
                 </span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="about.html">Über uns</a></li>
+                <li><a href="services.html">Leistungen</a></li>
+                <li><a href="gallery.html">Galerie</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -83,8 +83,8 @@
             </div>
         </div>
         <div class="container">
-            <h1>Our Gallery</h1>
-            <p>Showcasing Our Best Work</p>
+            <h1>Unsere Galerie</h1>
+            <p>Zeigt unsere beste Arbeit</p>
         </div>
     </section>
 
@@ -93,82 +93,82 @@
         <div class="container">
             <div class="gallery-grid">
                 <div class="gallery-item" onclick="openLightbox(0)">
-                    <img src="img/IMG-20250728-WA0003.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0003.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(1)">
-                    <img src="img/IMG-20250728-WA0004.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0004.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(2)">
-                    <img src="img/IMG-20250728-WA0005.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0005.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(3)">
-                    <img src="img/IMG-20250728-WA0006.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0006.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(4)">
-                    <img src="img/IMG-20250728-WA0007.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0007.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(5)">
-                    <img src="img/IMG-20250728-WA0008.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0008.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(6)">
-                    <img src="img/IMG-20250728-WA0009.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0009.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(7)">
-                    <img src="img/IMG-20250728-WA0010.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0010.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(8)">
-                    <img src="img/IMG-20250728-WA0012.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0012.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(9)">
-                    <img src="img/IMG-20250728-WA0013.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0013.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(10)">
-                    <img src="img/IMG-20250728-WA0014.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0014.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(11)">
-                    <img src="img/IMG-20250728-WA0015.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0015.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(12)">
-                    <img src="img/IMG-20250728-WA0016.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0016.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(13)">
-                    <img src="img/IMG-20250728-WA0017.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0017.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(14)">
-                    <img src="img/IMG-20250728-WA0018.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0018.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(15)">
-                    <img src="img/IMG-20250728-WA0019.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0019.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(16)">
-                    <img src="img/IMG-20250728-WA0020.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0020.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(17)">
-                    <img src="img/IMG-20250728-WA0019.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0019.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(18)">
-                    <img src="img/IMG-20250728-WA0022.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0022.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(19)">
-                    <img src="img/IMG-20250728-WA0023.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0023.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(20)">
-                    <img src="img/IMG-20250728-WA0024.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0024.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(21)">
-                    <img src="img/IMG-20250728-WA0025.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0025.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(22)">
-                    <img src="img/IMG-20250728-WA0026.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0026.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(23)">
-                    <img src="img/IMG-20250728-WA0027.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0027.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(24)">
-                    <img src="img/IMG-20250728-WA0028.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0028.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(25)">
-                    <img src="img/IMG-20250728-WA0029.jpg" alt="Construction Project">
+                    <img src="img/IMG-20250728-WA0029.jpg" alt="Bauprojekt">
                 </div>
             </div>
         </div>
@@ -204,25 +204,25 @@
                     </span>
                 </div>
                 <div class="footer-links">
-                    <h4>Quick Links</h4>
+                    <h4>Schnelllinks</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Startseite</a></li>
+                        <li><a href="about.html">Über uns</a></li>
+                        <li><a href="services.html">Leistungen</a></li>
+                        <li><a href="contact.html">Kontakt</a></li>
                     </ul>
                 </div>
                 <div class="footer-services">
-                    <h4>Services</h4>
+                    <h4>Leistungen</h4>
                     <ul>
-                        <li>Commercial Construction</li>
-                        <li>Residential Construction</li>
-                        <li>Renovation & Remodeling</li>
-                        <li>Architectural Design</li>
+                        <li>Gewerbebau</li>
+                        <li>Wohnungsbau</li>
+                        <li>Renovierung & Umbau</li>
+                        <li>Architekturdesign</li>
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <h4>Follow Us</h4>
+                    <h4>Folgen Sie uns</h4>
                     <div class="social-links">
                         <a href="https://www.instagram.com/extrabau2025/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://wa.me/491604205112" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 EXTRA BAU. All rights reserved.</p>
+                <p>&copy; 2025 EXTRA BAU. Alle Rechte vorbehalten.</p>
             </div>
         </div>
     </footer>
