--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="description" content="EXTRA BAU - Leading Construction Company specializing in modern interior construction, drywall, renovation, flooring, and building cleaning services.">
-    <meta name="keywords" content="construction, interior construction, drywall, renovation, flooring, building cleaning, EXTRA BAU">
+    <meta name="description" content="EXTRA BAU - Führendes Bauunternehmen, spezialisiert auf moderne Innenausbau, Trockenbau, Renovierung, Bodenbeläge und Gebäudereinigung.">
+    <meta name="keywords" content="Bau, Innenausbau, Trockenbau, Renovierung, Bodenbeläge, Gebäudereinigung, EXTRA BAU">
     <meta name="author" content="EXTRA BAU">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#2e7d32">
-    <title>EXTRA BAU - Construction Company</title>
+    <title>EXTRA BAU - Bauunternehmen</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -34,11 +34,11 @@
                 </span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="about.html">Über uns</a></li>
+                <li><a href="services.html">Leistungen</a></li>
+                <li><a href="gallery.html">Galerie</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -85,11 +85,11 @@
         <div class="hero-content">
             <h1>
                 Extra Bau 2025
-                <span>Your Partner for Modern Interior Construction</span>
+                <span>Ihr Partner für modernen Innenausbau</span>
             </h1>
-            <p>Quality, reliability, and clean work in drywall, renovation, flooring, and building cleaning.</p>
+            <p>Qualität, Zuverlässigkeit und saubere Arbeit in Trockenbau, Renovierung, Bodenbelägen und Gebäudereinigung.</p>
             <div class="cta-buttons">
-                <a href="services.html" class="btn btn-secondary">Our Services</a>
+                <a href="services.html" class="btn btn-secondary">Unsere Leistungen</a>
             </div>
         </div>
     </section>
@@ -97,37 +97,37 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <div class="container">
-            <h2>About EXTRA BAU</h2>
+            <h2>Über EXTRA BAU</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>EXTRA BAU is a leading construction company dedicated to delivering exceptional building solutions. With years of experience in the construction industry, we specialize in residential, commercial, and industrial projects.</p>
-                    <p>Our team of skilled professionals combines traditional craftsmanship with modern construction techniques to ensure every project meets the highest standards of quality and safety.</p>
+                    <p>EXTRA BAU ist ein führendes Bauunternehmen, das sich auf außergewöhnliche Baulösungen spezialisiert hat. Mit jahrelanger Erfahrung in der Bauindustrie sind wir auf Wohn-, Gewerbe- und Industriebauten spezialisiert.</p>
+                    <p>Unser Team aus qualifizierten Fachkräften verbindet traditionelles Handwerk mit modernen Bautechniken, um sicherzustellen, dass jedes Projekt den höchsten Qualitäts- und Sicherheitsstandards entspricht.</p>
                     <div class="about-features">
                         <div class="feature-card">
                             <div class="feature-icon">
                                 <i class="fas fa-rocket"></i>
                             </div>
-                            <h3>Fast</h3>
-                            <p>Execution</p>
+                            <h3>Schnell</h3>
+                            <p>Ausführung</p>
                         </div>
                         <div class="feature-card">
                             <div class="feature-icon">
                                 <i class="fas fa-broom"></i>
                             </div>
-                            <h3>Clean</h3>
-                            <p>Work</p>
+                            <h3>Sauber</h3>
+                            <p>Arbeit</p>
                         </div>
                         <div class="feature-card">
                             <div class="feature-icon">
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h3>Quality</h3>
-                            <p>Results</p>
+                            <h3>Qualität</h3>
+                            <p>Ergebnisse</p>
                         </div>
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="img/extra.jpg" alt="Construction Site">
+                    <img src="img/extra.jpg" alt="Baustelle">
                 </div>
             </div>
         </div>
@@ -136,49 +136,49 @@
     <!-- Services Section -->
     <section id="services" class="services-section">
         <div class="container">
-            <h2>Our Services</h2>
+            <h2>Unsere Leistungen</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-building"></i>
                     </div>
-                    <h3>Commercial Construction</h3>
-                    <p>Complete commercial building solutions including offices, retail spaces, and industrial facilities.</p>
+                    <h3>Gewerbebau</h3>
+                    <p>Vollständige gewerbliche Baulösungen einschließlich Büros, Einzelhandelsflächen und Industrieanlagen.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-home"></i>
                     </div>
-                    <h3>Residential Construction</h3>
-                    <p>Custom homes, renovations, and residential projects tailored to your specific needs.</p>
+                    <h3>Wohnungsbau</h3>
+                    <p>Individuelle Häuser, Renovierungen und Wohnprojekte, die auf Ihre spezifischen Bedürfnisse zugeschnitten sind.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-tools"></i>
                     </div>
-                    <h3>Renovation & Remodeling</h3>
-                    <p>Transform existing spaces with our comprehensive renovation and remodeling services.</p>
+                    <h3>Renovierung & Umbau</h3>
+                    <p>Transformieren Sie bestehende Räume mit unseren umfassenden Renovierungs- und Umbauservices.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-drafting-compass"></i>
                     </div>
-                    <h3>Architectural Design</h3>
-                    <p>Professional architectural design services to bring your vision to life.</p>
+                    <h3>Architekturdesign</h3>
+                    <p>Professionelle Architekturdesign-Services, um Ihre Vision zum Leben zu erwecken.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-hard-hat"></i>
                     </div>
-                    <h3>Project Management</h3>
-                    <p>Comprehensive project management ensuring timely delivery and quality control.</p>
+                    <h3>Projektmanagement</h3>
+                    <p>Umfassendes Projektmanagement für termingerechte Lieferung und Qualitätskontrolle.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-paint-roller"></i>
                     </div>
-                    <h3>Interior Finishing</h3>
-                    <p>Complete interior finishing services including painting, flooring, and fixtures.</p>
+                    <h3>Innenausbau</h3>
+                    <p>Vollständige Innenausbau-Services einschließlich Malerei, Bodenbelägen und Einrichtungen.</p>
                 </div>
             </div>
         </div>
@@ -189,20 +189,20 @@
     <!-- Gallery Section -->
     <section id="gallery" class="gallery-section">
         <div class="container">
-            <h2>Our Gallery</h2>
+            <h2>Unsere Galerie</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="img/IMG-20250728-WA0003.jpg" alt="Construction Project 1">
+                    <img src="img/IMG-20250728-WA0003.jpg" alt="Bauprojekt 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/IMG-20250728-WA0004.jpg" alt="Construction Project 2">
+                    <img src="img/IMG-20250728-WA0004.jpg" alt="Bauprojekt 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/IMG-20250728-WA0005.jpg" alt="Construction Project 3">
+                    <img src="img/IMG-20250728-WA0005.jpg" alt="Bauprojekt 3">
                 </div>
             </div>
             <div class="gallery-cta">
-                <a href="gallery.html" class="btn btn-primary">View All Photos</a>
+                <a href="gallery.html" class="btn btn-primary">Alle Fotos anzeigen</a>
             </div>
         </div>
     </section>
@@ -210,35 +210,35 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2>Contact Us</h2>
+            <h2>Kontaktieren Sie uns</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
-                            <h4>Address</h4>
+                            <h4>Adresse</h4>
                             <p>Wickratherstr. 247 <br> 41236 Mönchengladbach</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
-                            <h4>Phone</h4>
+                            <h4>Telefon</h4>
                             <p> 0160 42 05 112</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
-                            <h4>Email</h4>
+                            <h4>E-Mail</h4>
                             <p>info@extrabau2025.de</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
                         <div>
-                            <h4>Working Hours</h4>
-                            <p>Monday - Friday: 8:00 AM - 6:00 PM</p>
+                            <h4>Arbeitszeiten</h4>
+                            <p>Montag - Freitag: 8:00 - 18:00 Uhr</p>
                         </div>
                     </div>
                 </div>
@@ -262,25 +262,25 @@
                     </span>
                 </div>
                 <div class="footer-links">
-                    <h4>Quick Links</h4>
+                    <h4>Schnelllinks</h4>
                     <ul>
-                        <li><a href="#main">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#main">Startseite</a></li>
+                        <li><a href="#about">Über uns</a></li>
+                        <li><a href="#services">Leistungen</a></li>
+                        <li><a href="#contact">Kontakt</a></li>
                     </ul>
                 </div>
                 <div class="footer-services">
-                    <h4>Services</h4>
+                    <h4>Leistungen</h4>
                     <ul>
-                        <li>Commercial Construction</li>
-                        <li>Residential Construction</li>
-                        <li>Renovation & Remodeling</li>
-                        <li>Architectural Design</li>
+                        <li>Gewerbebau</li>
+                        <li>Wohnungsbau</li>
+                        <li>Renovierung & Umbau</li>
+                        <li>Architekturdesign</li>
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <h4>Follow Us</h4>
+                    <h4>Folgen Sie uns</h4>
                     <div class="social-links">
                         <a href="https://www.instagram.com/extrabau2025/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://wa.me/491604205112" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 EXTRA BAU. All rights reserved.</p>
+                <p>&copy; 2025 EXTRA BAU. Alle Rechte vorbehalten.</p>
             </div>
         </div>
     </footer>
