--- a/services.html
+++ b/services.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="description" content="Explore EXTRA BAU's comprehensive construction services including drywall, flooring, renovation, and building cleaning solutions.">
-    <meta name="keywords" content="construction services, drywall, flooring, renovation, building cleaning, EXTRA BAU services">
+    <meta name="description" content="Entdecken Sie EXTRA BAUs umfassende Bauleistungen einschließlich Trockenbau, Bodenbeläge, Renovierung und Gebäudereinigungslösungen.">
+    <meta name="keywords" content="Bauleistungen, Trockenbau, Bodenbeläge, Renovierung, Gebäudereinigung, EXTRA BAU Leistungen">
     <meta name="author" content="EXTRA BAU">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#2e7d32">
-    <title>Our Services - EXTRA BAU Construction Company</title>
+    <title>Unsere Leistungen - EXTRA BAU Bauunternehmen</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -34,11 +34,11 @@
                 </span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="about.html">Über uns</a></li>
+                <li><a href="services.html">Leistungen</a></li>
+                <li><a href="gallery.html">Galerie</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -83,15 +83,15 @@
             </div>
         </div>
         <div class="container">
-            <h1>Our Services</h1>
-            <p>Comprehensive Construction Solutions</p>
+            <h1>Unsere Leistungen</h1>
+            <p>Umfassende Baulösungen</p>
         </div>
     </section>
 
     <!-- Services Overview -->
     <section class="services-overview">
         <div class="container">
-            <p class="overview-text">We specialize in modern interior construction with a focus on quality, reliability, and clean work.</p>
+            <p class="overview-text">Wir sind spezialisiert auf modernen Innenausbau mit Fokus auf Qualität, Zuverlässigkeit und saubere Arbeit.</p>
         </div>
     </section>
 
@@ -101,19 +101,19 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0006.jpg" alt="Drywall Services">
+                        <img src="img/IMG-20250728-WA0006.jpg" alt="Trockenbau-Leistungen">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
                             <i class="fas fa-building"></i>
                         </div>
-                        <h3>Drywall</h3>
-                        <p>Professional drywall installation and finishing services for all types of projects.</p>
+                        <h3>Trockenbau</h3>
+                        <p>Professionelle Trockenbau-Installation und -Veredelung für alle Arten von Projekten.</p>
                         <ul class="service-card-features">
-                            <li><i class="fas fa-check"></i> Suspended ceilings</li>
-                            <li><i class="fas fa-check"></i> Room partitions</li>
-                            <li><i class="fas fa-check"></i> Attic conversions</li>
-                            <li><i class="fas fa-check"></i> Plastering Q1–Q4</li>
+                            <li><i class="fas fa-check"></i> Abgehängte Decken</li>
+                            <li><i class="fas fa-check"></i> Raumtrennwände</li>
+                            <li><i class="fas fa-check"></i> Dachbodenausbau</li>
+                            <li><i class="fas fa-check"></i> Verputzung Q1–Q4</li>
                         </ul>
 
                     </div>
@@ -121,19 +121,19 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0007.jpg" alt="Flooring Services">
+                        <img src="img/IMG-20250728-WA0007.jpg" alt="Bodenbelag-Leistungen">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
                             <i class="fas fa-home"></i>
                         </div>
-                        <h3>Flooring</h3>
-                        <p>Complete flooring solutions for residential and commercial projects.</p>
+                        <h3>Bodenbeläge</h3>
+                        <p>Vollständige Bodenbelag-Lösungen für Wohn- und Gewerbeprojekte.</p>
                         <ul class="service-card-features">
-                            <li><i class="fas fa-check"></i> Laminate & vinyl installation</li>
-                            <li><i class="fas fa-check"></i> Leveling & plastering</li>
-                            <li><i class="fas fa-check"></i> Skirting boards & transitions</li>
-                            <li><i class="fas fa-check"></i> Professional finishing</li>
+                            <li><i class="fas fa-check"></i> Laminat- & Vinylverlegung</li>
+                            <li><i class="fas fa-check"></i> Ausgleich & Verputzung</li>
+                            <li><i class="fas fa-check"></i> Sockelleisten & Übergänge</li>
+                            <li><i class="fas fa-check"></i> Professionelle Veredelung</li>
                         </ul>
 
                     </div>
@@ -141,19 +141,19 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0008.jpg" alt="Renovation Services">
+                        <img src="img/IMG-20250728-WA0008.jpg" alt="Renovierungsleistungen">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
                             <i class="fas fa-tools"></i>
                         </div>
-                        <h3>Renovation</h3>
-                        <p>A fresh breeze for your home. Transform your living space with our professional renovation services.</p>
+                        <h3>Renovierung</h3>
+                        <p>Ein frischer Wind für Ihr Zuhause. Transformieren Sie Ihren Wohnraum mit unseren professionellen Renovierungsleistungen.</p>
                         <ul class="service-card-features">
-                            <li><i class="fas fa-check"></i> Complete home renovations</li>
-                            <li><i class="fas fa-check"></i> Kitchen and bathroom remodeling</li>
-                            <li><i class="fas fa-check"></i> Interior design updates</li>
-                            <li><i class="fas fa-check"></i> Modernization projects</li>
+                            <li><i class="fas fa-check"></i> Vollständige Hausrenovierungen</li>
+                            <li><i class="fas fa-check"></i> Küchen- und Badezimmer-Umbau</li>
+                            <li><i class="fas fa-check"></i> Innenraum-Design-Updates</li>
+                            <li><i class="fas fa-check"></i> Modernisierungsprojekte</li>
                         </ul>
 
                     </div>
@@ -161,19 +161,19 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0009.jpg" alt="Building Cleaning">
+                        <img src="img/IMG-20250728-WA0009.jpg" alt="Gebäudereinigung">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
                             <i class="fas fa-broom"></i>
                         </div>
-                        <h3>Building Cleaning</h3>
-                        <p>Clean, thorough, reliable cleaning services for all types of buildings.</p>
+                        <h3>Gebäudereinigung</h3>
+                        <p>Saubere, gründliche, zuverlässige Reinigungsleistungen für alle Arten von Gebäuden.</p>
                         <ul class="service-card-features">
-                            <li><i class="fas fa-check"></i> Post-construction cleaning</li>
-                            <li><i class="fas fa-check"></i> Regular maintenance cleaning</li>
-                            <li><i class="fas fa-check"></i> Deep cleaning services</li>
-                            <li><i class="fas fa-check"></i> Commercial cleaning</li>
+                            <li><i class="fas fa-check"></i> Nachbau-Reinigung</li>
+                            <li><i class="fas fa-check"></i> Regelmäßige Wartungsreinigung</li>
+                            <li><i class="fas fa-check"></i> Tiefenreinigungsleistungen</li>
+                            <li><i class="fas fa-check"></i> Gewerbereinigung</li>
                         </ul>
 
                     </div>
@@ -181,19 +181,19 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0010.jpg" alt="Project Management">
+                        <img src="img/IMG-20250728-WA0010.jpg" alt="Projektmanagement">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
                             <i class="fas fa-hard-hat"></i>
                         </div>
-                        <h3>Project Management</h3>
-                        <p>Our experienced project managers ensure your construction project runs smoothly from start to finish.</p>
+                        <h3>Projektmanagement</h3>
+                        <p>Unsere erfahrenen Projektmanager stellen sicher, dass Ihr Bauprojekt reibungslos von Anfang bis Ende läuft.</p>
                         <ul class="service-card-features">
-                            <li><i class="fas fa-check"></i> Comprehensive project planning</li>
-                            <li><i class="fas fa-check"></i> Budget management and control</li>
-                            <li><i class="fas fa-check"></i> Timeline coordination</li>
-                            <li><i class="fas fa-check"></i> Quality control oversight</li>
+                            <li><i class="fas fa-check"></i> Umfassende Projektplanung</li>
+                            <li><i class="fas fa-check"></i> Budgetverwaltung und -kontrolle</li>
+                            <li><i class="fas fa-check"></i> Zeitplankoordination</li>
+                            <li><i class="fas fa-check"></i> Qualitätskontrolle-Überwachung</li>
                         </ul>
 
                     </div>
@@ -201,19 +201,19 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250802-WA0015.jpg" alt="Interior Finishing">
+                        <img src="img/IMG-20250802-WA0015.jpg" alt="Innenausbau">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
                             <i class="fas fa-paint-roller"></i>
                         </div>
-                        <h3>Interior Finishing</h3>
-                        <p>Complete your space with our comprehensive interior finishing services that add the perfect final touches.</p>
+                        <h3>Innenausbau</h3>
+                        <p>Vervollständigen Sie Ihren Raum mit unseren umfassenden Innenausbau-Leistungen, die die perfekten letzten Handgriffe hinzufügen.</p>
                         <ul class="service-card-features">
-                            <li><i class="fas fa-check"></i> Custom cabinetry and millwork</li>
-                            <li><i class="fas fa-check"></i> Flooring installation and refinishing</li>
-                            <li><i class="fas fa-check"></i> Painting and decorative finishes</li>
-                            <li><i class="fas fa-check"></i> Lighting installation</li>
+                            <li><i class="fas fa-check"></i> Maßgefertigte Schränke und Möbel</li>
+                            <li><i class="fas fa-check"></i> Bodenbelag-Installation und -Veredelung</li>
+                            <li><i class="fas fa-check"></i> Malerei und dekorative Veredelungen</li>
+                            <li><i class="fas fa-check"></i> Beleuchtungsinstallation</li>
                         </ul>
 
                     </div>
@@ -225,35 +225,35 @@
     <!-- Process Section -->
     <section class="process-section">
         <div class="container">
-            <h2>Our Construction Process</h2>
+            <h2>Unser Bauprozess</h2>
             <div class="process-steps">
                 <div class="step">
                     <div class="step-icon">
                         <i class="fas fa-lightbulb"></i>
                     </div>
-                    <h3>Consultation</h3>
-                    <p>We meet to understand your vision, requirements, and budget to create a tailored solution.</p>
+                    <h3>Beratung</h3>
+                    <p>Wir treffen uns, um Ihre Vision, Anforderungen und Budget zu verstehen und eine maßgeschneiderte Lösung zu erstellen.</p>
                 </div>
                 <div class="step">
                     <div class="step-icon">
                         <i class="fas fa-drafting-compass"></i>
                     </div>
-                    <h3>Design & Planning</h3>
-                    <p>Our team creates detailed designs and comprehensive project plans with timelines and budgets.</p>
+                    <h3>Design & Planung</h3>
+                    <p>Unser Team erstellt detaillierte Designs und umfassende Projektpläne mit Zeitplänen und Budgets.</p>
                 </div>
                 <div class="step">
                     <div class="step-icon">
                         <i class="fas fa-hammer"></i>
                     </div>
-                    <h3>Construction</h3>
-                    <p>Expert craftsmen execute the project with precision, quality control, and regular updates.</p>
+                    <h3>Bau</h3>
+                    <p>Experten-Handwerker führen das Projekt mit Präzision, Qualitätskontrolle und regelmäßigen Updates aus.</p>
                 </div>
                 <div class="step">
                     <div class="step-icon">
                         <i class="fas fa-check-circle"></i>
                     </div>
-                    <h3>Completion</h3>
-                    <p>Final inspection, quality assurance, and handover of your completed project.</p>
+                    <h3>Fertigstellung</h3>
+                    <p>Endkontrolle, Qualitätssicherung und Übergabe Ihres fertiggestellten Projekts.</p>
                 </div>
             </div>
         </div>
@@ -276,25 +276,25 @@
                     </span>
                 </div>
                 <div class="footer-links">
-                    <h4>Quick Links</h4>
+                    <h4>Schnelllinks</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Startseite</a></li>
+                        <li><a href="about.html">Über uns</a></li>
+                        <li><a href="services.html">Leistungen</a></li>
+                        <li><a href="contact.html">Kontakt</a></li>
                     </ul>
                 </div>
                 <div class="footer-services">
-                    <h4>Services</h4>
+                    <h4>Leistungen</h4>
                     <ul>
-                        <li>Commercial Construction</li>
-                        <li>Residential Construction</li>
-                        <li>Renovation & Remodeling</li>
-                        <li>Architectural Design</li>
+                        <li>Gewerbebau</li>
+                        <li>Wohnungsbau</li>
+                        <li>Renovierung & Umbau</li>
+                        <li>Architekturdesign</li>
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <h4>Follow Us</h4>
+                    <h4>Folgen Sie uns</h4>
                     <div class="social-links">
                         <a href="https://www.instagram.com/extrabau2025/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://wa.me/491604205112" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -302,7 +302,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 EXTRA BAU. All rights reserved.</p>
+                <p>&copy; 2025 EXTRA BAU. Alle Rechte vorbehalten.</p>
             </div>
         </div>
     </footer>
